[package]
name = "cassandra-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
cassandra-cpp = "3.0.2"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11.6"
log = "0.4"
