[package]
name = "postgres-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "time",
    "chrono",
] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4.39", features = ["serde"] }
