[package]
name = "rust-rabbitmq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rabbitmq-stream-client = "0.7.0"
tokio = { version = "1.39.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
